Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,9 +6,36 @@ before_script:
 
 stages:
     - hello
+    - test
+    - pylint
+
+test-job:
+    stage: test
+
+    before_script:
+        - pip install -r requirements.txt
+    
+    script:
+        - coverage run manage.py test
+        - coverage report > report.txt
+        - mkdir public
+        - mv report.txt ./public
+    artifacts:
+        paths:
+            - ./public
+
+
+pylint-job:
+    stage: pylint
+
+    before_script:
+        - pip install -r requirements.txt
+
+    scripr:
+        -pylint ./chat
 
 hello-job:
-    stages: hello
+    stage: hello
 
     before_script:
         echo "starting"
