Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,7 +31,7 @@ pylint-job:
     before_script:
         - pip install -r requirements.txt
 
-    scripr:
+    script:
         -pylint ./chat
 
 hello-job:
