--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-Django=4.0.4
-django-phonenumber-field=6.1.0
-django-taggit=2.1.0
-Pillow=9.1.0
+Django==4.0.4
+django-phonenumber-field==6.1.0
+django-taggit==2.1.0
+Pillow==9.1.0
